src/components/Table/Table.module.scss
.container {
  position: relative;

  .loading-mask {
    display: flex;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    align-items: center;
    justify-content: center;
    background: rgb(255 255 255 / 50%);
  }

  .scroll-container {
    .table {
      background-color: var(--color-background-primary);
      margin-top: 1px;
      cursor: default;
      width: 100%;
      border-collapse: separate;
      border-spacing: 0;
      white-space: normal;

      &.auto {
        table-layout: auto;
      }

      &.fixed {
        table-layout: fixed;
      }
    }

    .borderless {
      border: none;
    }

    &.scrollable {
      display: block;
      -webkit-overflow-scrolling: touch;

      &.scrollable-x {
        overflow-x: auto;
      }

      &.scrollable-y {
        height: 100%;
        overflow-y: auto;
      }

      > .table-bordered {
        border: 0;
      }
    }
  }

  &.full-height {
    height: 100%;
  }
}

